# llm-translator

./: AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
src/parsers/: xliff.py  xliff_test.py
src/parsers/testdata/: basic.xlf  test_sample.sdlxliff
